<resources>
    <string name="app_name">HvA Quest</string>
    <string name="action_settings">Settings</string>
    <string name="description_home">After pressing start you will start the quist. After each question a picture of a HvA building is shown. Go to the building and start the next question. At the end there will be a prize waiting for you!</string>
    <string name="title_home">Welcome to the HvA Locations Quest</string>
    <string name="button_start">Start Quest</string>
    <string name="title_question">Question</string>
    <string name="title_location_clue">Location Clue</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_next_question">Next Question</string>
    <string name="description_location_clue">Go to the location as shown in the image below.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_completed">Quest Completed</string>
    <string name="description_completed">Congratulations, you finished the quest! Here is your prize</string>
    <string name="btn_finish">Finish</string>
</resources>
